# whatsapp2html

./: .gitignore  LICENSE  README.md  whatsapp2html.cabal
.stack-work/: stack.sqlite3
src/: Html.hs  Main.hs  Parser.hs  Whatsapp.hs
