name:                whatsapp2html
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Aurora2500/whatsapp2html#readme
license:             BSD3
license-file:        LICENSE
author:              Aurora Zuoris
maintainer:          programming.aurora@gmail.com
copyright:           2021 Aurora Zuoris
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable whatsapp2html
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
